--- a/one_point/index.html
+++ b/one_point/index.html
@@ -30,5 +30,30 @@
 
   <body>
     <script src="sketch.js"></script>
+    <!-- Help Key -->
+    <section class="helpWrapper">
+      <div id="openModalBtn">?</div>
+
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <h2>NEED A HELPING HAND?</h2>
+          <figure class="kb_img">
+            <img class="keyboard" src="img/keyboard.svg" alt="keyboard image" />
+          </figure>
+          <div class="info_wrap">
+            <ul class="keylist">
+              <li class="li_dk">C Major Scale (Lower Octave)</li>
+              <li class="li_md">C Major Scale (Higher Octave)</li>
+              <li class="li_lt">
+                Sharp and Flat Notes (matches with Higher Scale)
+              </li>
+              <li class="li_yel">
+                Use CAPITAL CASE to LOWER the pitch DOWN by one octave
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
